syntax = "proto3";

package tour;

option go_package = "TOURS_MS/proto/tour";
import "google/api/timestamp.proto";

service TourService{
    rpc GetById(IdRequest) returns(Tour){}
    rpc GetAll(EmptyRequest) returns(ToursResponse){}
    rpc GetAllByAuthor(UserIdRequest) returns(ToursResponse){}
    rpc Create(Tour) returns (Tour){}
    rpc Update(Tour) returns (Tour){}
    rpc Delete(IdRequest) returns (EmptyResponse){}
}
service TouristPositionService{
    rpc GetById(IdRequest) returns(TouristPosition){}
    rpc GetByUserId(IdRequest) returns(TouristPosition){}
    rpc Create(TouristPosition) returns(TouristPosition){}
    rpc Update(TouristPosition) returns(TouristPosition){}
}


message EmptyRequest{}
message EmptyResponse{}

message ToursResponse{
    repeated Tour Tours = 1;
}
message KeypointResponse{
    repeated Keypoint Keypoints = 1;
}

message IdRequest{
    int64 Id = 1;
}
message UserIdRequest{
    int64 UserId = 1;
}
message UserAndIdRequest{
    int64 UserId = 1;
    int64 Id = 2;
}

message Keypoint{
    int64 Id = 1;
    int64 TourId = 2;
    string Name = 3;
    float Latitude = 4;
    float Longitude = 5;
    string Description = 6;
    int32 Position = 7;
    string Image = 8;
    string Secret = 9;
}
message Tour{
    int64 Id = 1;
    int64 UserId  = 2;
    string Name = 3;
    string Description = 4;
    float Price = 5;
    int64 Duration = 6;
    float Distance = 7;
    TourStatus Status = 8;
    TransportType TransportType = 9;
    TourDifficulty TourDifficulty = 10;
    repeated string Tags = 11;
    google.protobuf.Timestamp StatusUpdateTime = 12;
}

message TouristPosition{
    int64 Id = 1;
    int64 UserId = 2;
    float Latitude = 3;
    float Longitude = 4;
    google.protobuf.Timestamp UpdatedAt = 5;
}

enum TourStatus {
    DRAFT = 0;
    PUBLISHED = 1;
    ARCHIVED = 2;
    DISABLED = 3;
    CUSTOM = 4;
    CAMPAIGN = 5;
}

enum TourDifficulty {
    EASY = 0;
    MEDIUM = 1;
    HARD = 2;
    EXTREME = 3;
}

enum TransportType {
    WALK = 0;
    BIKE = 1;
    CAR = 2;
    BOAT = 3;
}

